unpackaged/main/default/objects/Catalog_Product__c/Catalog_Product__c.object-meta.xml
<CustomObject>
    <label>Product (Catalog)</label>
    <nameField>
        <label>Product (Catalog) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products (Catalog)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>