unpackaged/main/default/objects/Catalog_Product__c/fields/Accessory_Sub_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Sub_Type_Name__c</fullName>
    <label>Accessory Sub Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>