unpackaged/main/default/objects/Catalog_Product__c/fields/Accessory_Type__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accessory Type</label>
    <referenceTo>Accessory_Type__c</referenceTo>
    <relationshipLabel>Products (Catalog)</relationshipLabel>
    <relationshipName>Products_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>