unpackaged/main/default/objects/Catalog_Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Products (Catalog)</relationshipLabel>
    <relationshipName>Products_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>