unpackaged/main/default/objects/Catalog_Product__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection</label>
    <referenceTo>Collection__c</referenceTo>
    <relationshipLabel>Products (Catalog)</relationshipLabel>
    <relationshipName>Products_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>