unpackaged/main/default/objects/Catalog_Product__c/fields/Color_Group__c.field-meta.xml
<CustomField>
    <fullName>Color_Group__c</fullName>
    <formula>CASE( Color__c, 
&quot;Black&quot;,&quot;Black&quot;,
&quot;Black Matte&quot;,&quot;Black&quot;,
&quot;All-Black&quot;,&quot;Black&quot;,
&quot;Red&quot;,&quot;Red&quot;,
&quot;Silver&quot;,&quot;Silver&quot;,
&quot;Marine&quot;,&quot;Marine&quot;,
&quot;Peach Blue&quot;,&quot;Peach&quot;,
&quot;Saffron Gloss&quot;,&quot;Saffron&quot;,
&quot;Sage Gloss&quot;,&quot;Sage&quot;,
&quot;Coral Gloss&quot;,&quot;Coral&quot;,
&quot;Coral&quot;,&quot;Coral&quot;,
&quot;Slate Gloss&quot;,&quot;Slate&quot;,
&quot;Scarlet&quot;,&quot;Scarlet&quot;,
&quot;Cognac&quot;,&quot;Cognac&quot;,
&quot;Ocean&quot;,&quot;Ocean&quot;,
&quot;Lagoon&quot;,&quot;Lagoon&quot;,
&quot;Azure&quot;,&quot;Azure&quot;,
&quot;Blush&quot;,&quot;Blush&quot;,
&quot;Paprika&quot;,&quot;Paprika&quot;,
&quot;Clementine&quot;,&quot;Clementine&quot;,
&quot;Honey&quot;,&quot;Honey&quot;,
&quot;White&quot;,&quot;White&quot;,
&quot;Green&quot;,&quot;Green&quot;,
&quot;Titanium&quot;,&quot;Titanium&quot;,
&quot;Blue&quot;,&quot;Blue&quot;,
&quot;Blue Gloss&quot;,&quot;Blue&quot;,
&quot;Blue Matte&quot;,&quot;Blue&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Group</label>
    <type>Text</type>
</CustomField>