unpackaged/main/default/objects/Catalog_Product__c/fields/Color_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Color_Image_Url__c</fullName>
    <label>Color Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>