unpackaged/main/default/objects/Catalog_Product__c/fields/Color_Product__c.field-meta.xml
<CustomField>
    <fullName>Color_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Color Product</label>
    <referenceTo>Color__c</referenceTo>
    <relationshipLabel>Products (Catalog)</relationshipLabel>
    <relationshipName>Products_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>