unpackaged/main/default/objects/Catalog_Product__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <label>Creation Date</label>
    <type>DateTime</type>
</CustomField>