unpackaged/main/default/objects/Catalog_Product__c/fields/Excluded_Country__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Country__c</fullName>
    <label>Excluded Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>