unpackaged/main/default/objects/Catalog_Product__c/fields/Finishing__c.field-meta.xml
<CustomField>
    <fullName>Finishing__c</fullName>
    <formula>IF(CONTAINS(Color__c, &#39;Matte&#39;),&#39;Matte&#39;,  IF(CONTAINS(Color__c, &#39;Gloss&#39;),&#39;Gloss&#39;,&#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finishing</label>
    <type>Text</type>
</CustomField>