unpackaged/main/default/objects/Catalog_Product__c/fields/Image_Preview__c.field-meta.xml
<CustomField>
    <fullName>Image_Preview__c</fullName>
    <formula>IMAGE( Color_Image_Url__c , &quot;No Image&quot;, 100, -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Preview</label>
    <type>Text</type>
</CustomField>