unpackaged/main/default/objects/Catalog_Product__c/fields/Imperial_Height__c.field-meta.xml
<CustomField>
    <fullName>Imperial_Height__c</fullName>
    <label>Imperial Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>