unpackaged/main/default/objects/Catalog_Product__c/fields/Imperial_Volume__c.field-meta.xml
<CustomField>
    <fullName>Imperial_Volume__c</fullName>
    <label>Imperial Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>