unpackaged/main/default/objects/Catalog_Product__c/fields/Imperial_Weight__c.field-meta.xml
<CustomField>
    <fullName>Imperial_Weight__c</fullName>
    <label>Imperial Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>