unpackaged/main/default/objects/Catalog_Product__c/fields/Imperial_Width__c.field-meta.xml
<CustomField>
    <fullName>Imperial_Width__c</fullName>
    <label>Imperial Width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>