unpackaged/main/default/objects/Catalog_Product__c/fields/Included_Country__c.field-meta.xml
<CustomField>
    <fullName>Included_Country__c</fullName>
    <label>Included Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>