unpackaged/main/default/objects/Catalog_Product__c/fields/isCustomizable__c.field-meta.xml
<CustomField>
    <fullName>isCustomizable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustomizable</label>
    <type>Checkbox</type>
</CustomField>