unpackaged/main/default/objects/Catalog_Product__c/fields/isCustomizationOption__c.field-meta.xml
<CustomField>
    <fullName>isCustomizationOption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustomizationOption</label>
    <type>Checkbox</type>
</CustomField>