unpackaged/main/default/objects/Catalog_Product__c/fields/Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Id__c</fullName>
    <label>Master Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>