unpackaged/main/default/objects/Catalog_Product__c/fields/Metric_Depth__c.field-meta.xml
<CustomField>
    <fullName>Metric_Depth__c</fullName>
    <label>Metric Depth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>