unpackaged/main/default/objects/Catalog_Product__c/fields/Metric_Height__c.field-meta.xml
<CustomField>
    <fullName>Metric_Height__c</fullName>
    <label>Metric Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>