unpackaged/main/default/objects/Catalog_Product__c/fields/Metric_Weight__c.field-meta.xml
<CustomField>
    <fullName>Metric_Weight__c</fullName>
    <label>Metric Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>