unpackaged/main/default/objects/Catalog_Product__c/fields/Metric_Width__c.field-meta.xml
<CustomField>
    <fullName>Metric_Width__c</fullName>
    <label>Metric Width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>