unpackaged/main/default/objects/Catalog_Product__c/fields/Outside_Material__c.field-meta.xml
<CustomField>
    <fullName>Outside_Material__c</fullName>
    <label>Outside Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aluminium Cases</fullName>
            </value>
            <value>
                <fullName>Polycarbonate Cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>