unpackaged/main/default/objects/Catalog_Product__c/fields/Product_Image_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_2__c</fullName>
    <label>Product Image 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>