unpackaged/main/default/objects/Catalog_Product__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <externalId>true</externalId>
    <label>Product SKU</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>