unpackaged/main/default/objects/Catalog_Product__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cabin</fullName>
            </value>
            <value>
                <fullName>Check-In</fullName>
            </value>
            <value>
                <fullName>Trunk</fullName>
            </value>
            <value>
                <fullName>Backpack</fullName>
            </value>
            <value>
                <fullName>Backpack Large</fullName>
            </value>
            <value>
                <fullName>Backpack Small</fullName>
            </value>
            <value>
                <fullName>Weekender</fullName>
            </value>
            <value>
                <fullName>Tote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>