unpackaged/main/default/objects/Catalog_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_SKU__c</columns>
    <columns>Category__c</columns>
    <columns>Accessory_Type__c</columns>
    <columns>Accessory_Sub_Type__c</columns>
    <columns>Collection__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>